--- a/estrutura.html
+++ b/estrutura.html
@@ -9,7 +9,7 @@
 <body>
     <p class="cor-fria">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur nobis corporis molestiae repellat consequatur a neque? Voluptatibus corporis facilis quis molestiae sint alias! Qui minima labore quam necessitatibus ab nulla?</p>
     <p class="cor-quente">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum dolorem enim facere consequuntur, voluptatibus iure accusantium dolor deleniti. Dignissimos ducimus asperiores in praesentium quaerat magni cumque earum unde sed consequatur.</p>
-    <p class="cor-primaria">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam perferendis reiciendis iste assumenda voluptatibus harum inventore illum minima rerum quibusdam amet at voluptates ratione soluta aperiam incidunt, sapiente doloribus maxime?</p>
+    <p class="cor-primaria">kkkkkkkkkkkkk Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam perferendis reiciendis iste assumenda voluptatibus harum inventore illum minima rerum quibusdam amet at voluptates ratione soluta aperiam incidunt, sapiente doloribus maxime?</p>
     <p class="cor-secundaria">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium doloribus molestiae adipisci rem, necessitatibus temporibus praesentium voluptas velit voluptate aperiam fugiat eaque, eos aspernatur odio quia vel repellat expedita ipsam!</p>
 
     <style>
